# united-states-of-browsers

./: .coveragerc  .gitignore  About.md  MANIFEST.in  README.md  TODO.txt  UnitedStatesOfBrowsers.pyproj  UnitedStatesOfBrowsers.sln  __init__.py  azure-pipelines.yml  changelog.txt  conftest.py  project_organization.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_browser.py
.circleci/: config.yml
.conitnuous_integration/: azp-test.yml
_archived_code/db_merge/: db_search.py  helpers.py  paths_setup.py
_notes/: project_structure.txt  search_query_parsing
src/: __init__.py  __main__.py  annotations.py  browser_setup.py  db_handler.py  deduplicator.py  helpers.py  main.py  merge_db.py  read_browser_db.py  record_fetcher.py  scratch_pad.py  show.py  sql_db.py  write_new_db.py
tests/: __init__.py  comparing_fts_vs_python_search.py  fixtures.py  hypotheses.py  test_browser_setup.py  test_browser_specific_setup.py  test_db_search.py  test_deduplicator.py  test_merge_browser_databases.py  test_orchestrator.py  test_orchestrator_v2.py  test_paths_setup.py  test_read_browser_db.py  test_something.py  test_something_else.py  test_write_new_db.py
tests/AppData/: searchable_db
tests/data/: create_data_for_tests.py  creating_test_search_data.py  test_db_guids.txt  (+5 more)
tests_v1/: test_merge_browser_databases.py  test_read_browser_db.py
tinker/: sql_db.py
united-states-of-browsers/: __init__.py
united_states_of_browsers/: __init__.py  install.py  project_path.py  run_usb.py
utils/: reconstructing_requirements_from_site_packages.py
(+232 files in other folders)
