[tool.poetry]
name = "united-states-of-browsers"
version = "0.1.0"
description = "\"Tool to combine surfing histories across different browsers and browser profiles make it easier to search them all.\""
authors = ["Kshitij Chawla (kchawla-pi) <kc.insight.pi@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
codecov = "^2.1.12"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
